<resources>
    <string name="app_name">AppDemo</string>
    <string name="hint_username">Tên tài khoản</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="saved_username">Lưu mật khẩu?</string>
    <string name="lo_go">Logo</string>
    <string name="forgot_passwrod">
        <a href="http://www.google.com">Quên mật khẩu?</a>
    </string>
    <string name="account_regiser">Không có tài khoản,  </string>
    <string name="link_register">
        <a href="http://www.google.com">  Đăng Ký.</a>
    </string>
    <string name="hint_confirm">Xác nhận</string>
    <string name="hint_email">Email</string>
    <string name="account_login">Đã có tài khoản,  </string>
    <string name="link_login">
        <a href="http://www.google.com">  Đăng nhập.</a>
    </string>
    <string name="register_success">Tạo tài khoản thành công!</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="title_option">Tùy chọn</string>
    <string name="sub_item1">Mục phụ 1</string>
    <string name="sub_item2">Mục phụ 2</string>
    <string name="sub_item3">Mục phụ 3</string>
    <string name="title_setting">Cài đặt</string>
    <string name="tv_username">Tên tài khoản</string>
    <string name="title_notifi">Thông báo</string>
    <string name="title_profile">Hồ sơ</string>
    <string name="tv_logout">Đăng xuất</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="is_empty_user">nhập tài khoản!</string>
    <string name="is_empty_pass">nhập mật khẩu!</string>
    <string name="is_empty_rg_username">nhập tài khoản!</string>
    <string name="is_empty_rg_email">nhập email!</string>
    <string name="is_empty_rg_passwrod">nhập mật khẩu!</string>
    <string name="is_empty_rg_confirm_passwrod">nhập lại mật khẩu!</string>
    <string name="enter_a_valid_address">nhập địa chỉ hợp lệ!</string>
    <string name="password_incorrect">mật khẩu không khớp!</string>
    <string name="text_login_fail">Tài khoản hoặc mật khẩu không chính xác!</string>
    <string name="register_failed">Đăng ký thất bại Email này đã tồn tại!</string>
    <string name="log_out">Đăng xuất</string>
    <string name="btn_reset_passwrod">Đổi mật khẩu</string>
    <string name="import_email">nhập email để reset lại mật khẩu!</string>
    <string name="item_info">Thông tin CV</string>
    <string name="item_logout">Đăng xuất</string>
    <string name="btn_create_info">Tạo mới thông tin</string>
    <string name="password_to_short">nhập mật khẩu tối thiểu  6 ký tự</string>
    <string name="item_info_user">Thông tin tài khoản</string>

    <string name="tv_edit_user">Sửa thông tin</string>
    <string name="hint_change_password">Mật khẩu mới</string>
    <string name="btn_user_save_password">Lưu mật khẩu</string>
    <string name="hint_retype_password">Nhập lại mật khẩu</string>
    <string name="title_name">Name</string>
    <string name="tv_user_name">Tên người dùng</string>
    <string name="tv_email">Email</string>
    <string name="tv_user_email">Email người dùng</string>

    <string name="item_add">Thêm</string>

    <string name="create">tạo cv</string>
    <string name="erro404fullname">Xin hãy nhập họ tên</string>
    <string name="erro404dateofbirth">Xin hãy chọn ngày tháng năm sinh</string>
    <string name="error404phonenumber">xin hãy nhập số điện thoại</string>
    <string name="phonenumber_to_short">số điện thoại này ko tồn tại</string>
    <string name="error404introduce">Xin hãy nhập thông tin giới thiệu bản thân</string>
    <string name="cv_title">CV Xin Việc</string>
    <string name="full_name">Họ và tên</string>
    <string name="date_of_birth">Ngày Tháng Năm sinh</string>
    <string name="phone_number">Số Điện Thoại</string>
    <string name="email_address">Địa Chỉ email</string>
    <string name="introduce_youselft">Giới thiệu Bản thân</string>
    <string name="address">Nhập địa chỉ nơi bạn hiện đang sống</string>
    <string name="error404address">Xin hãy nhập đầy đủ thông tin nơi bạn hiện đang sống</string>
    <!-- TODO:  -->
    <string name="update_user_change">Đổi thông tin thành công</string>
    <string name="item_chat">Chat</string>

    <string name="job_title">Tiêu đề công việc</string>
    <string name="job_review">Giới Thiệu Công Việc</string>
    <string name="dateUpload">Ngày Đăng Bài</string>
    <string name="jobstatus">Kiểm tra tuyển dụng</string>
    <string name="like">thích</string>
    <string name="comment">bình luận</string>
    <string name="share">chia sẻ</string>
    <string name="intro_work">+ Introduce job :</string>
    <string name="company_address">+ Company address :</string>
    <string name="company_time_work">+ Company time job :</string>
    <string name="company_email">+ Company email :</string>
    <string name="some_infor_compnay">+ Some company information :</string>
    <string name="infor_job">+ Infomation job :</string>
    <string name="detail_job">Chi tiết công việc</string>
    <string name="send_cv">Send file job</string>
    <string name="dateCommnent">Ngày Binh Luận</string>
    <string name="answer">Trả Lời</string>
    <string name="number">12</string>

    =======

    <!--TODO-->
    <string name="tite_toolbar_news">Create job</string>
    <string name="edt_write_comment">Write comment...</string>
    <string name="title_detail_job">Detail job</string>
    <string name="item_saved">Saved</string>
    <string name="item_chat_new">Chat</string>
    <string name="item_delete">Delete</string>
    <string name="dialog_message_delete_detel">Do you want to delete this item?</string>
    <string name="message_yes">Yes</string>
    <string name="message_no">No</string>
    <string name="recruitime_period">+ Recrui time period</string>
    <string name="dialog_loading">Loading...</string>
    <string name="today">00/00/00</string>
    <string name="edt_chat_message">Enter the message...</string>
    <string name="user_online">online</string>
    <string name="user_offline">offline</string>
    <string name="hintSearchMess">search cccccc</string>
</resources>
