<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_drawable"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="9"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/lo_go"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_60" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_rg_username"
            style="@style/LoginTextInputLayoutStyle"
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:textColorHint="@color/white"
            android:theme="@style/LoginTextInputLayoutStyle"
            app:boxBackgroundColor="@color/babay"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:fontFamily="sans-serif-light"
                android:layout_width="match_parent"
                android:id="@+id/edt_rg_username"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_username"
                android:padding="@dimen/dp_20"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_rg_email"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:fontFamily="sans-serif-light"
            android:textColorHint="@color/white"
            android:theme="@style/LoginTextInputLayoutStyle"
            app:boxBackgroundColor="@color/babay"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:fontFamily="sans-serif-light"
                android:layout_width="match_parent"
                android:id="@+id/edt_rg_email"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_email"
                android:padding="@dimen/dp_20"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_rg_password"
                style="@style/LoginTextInputLayoutStyle"
                android:fontFamily="sans-serif-light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_weight="1"
                android:textColorHint="@color/white"
                android:theme="@style/LoginTextInputLayoutStyle"
                app:boxBackgroundColor="@color/babay"
                app:boxBackgroundMode="none"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:fontFamily="sans-serif-light"
                    android:layout_width="match_parent"
                    android:id="@+id/edt_rg_passwrod"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_password"
                    android:inputType="textVisiblePassword"
                    android:padding="@dimen/dp_20"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_rg_confirm_password"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_weight="1"
                android:textColorHint="@color/white"
                android:theme="@style/LoginTextInputLayoutStyle"
                app:boxBackgroundColor="@color/babay"
                android:fontFamily="sans-serif-light"
                app:boxBackgroundMode="none"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/edt_rg_confirm_passwrod"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_confirm"
                    android:inputType="textVisiblePassword"
                    android:padding="@dimen/dp_20"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button
            android:id="@+id/id_btn_rg_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_75"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/btn_custom"
            android:fontFamily="sans-serif-light"
            android:padding="@dimen/dp_15"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_btn_rg_register"
            android:layout_centerInParent="true">
            <TextView
                android:fontFamily="sans-serif-light"
                android:text="@string/account_regiser"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/id_tv_rg_login"
                android:textColorLink="@color/white"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/link_login"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>