<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/cv_toolbar"
        android:background="#9C27B0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:id="@+id/cimg_avatar"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:src="@drawable/ic_account_circle_black_24dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorXam"/>
                <ImageButton
                    android:id="@+id/imgbtn_camera_pick_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/cimg_avatar"
                    android:layout_alignTop="@id/cimg_avatar"
                    android:layout_marginRight="-4dp"
                    android:layout_marginTop="-4dp"
                    android:padding="4dp"
                    android:background="@drawable/white_circle"
                    android:src="@drawable/ic_camera_alt_black_24dp"/>
                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/cimg_avatar"
                    android:layout_alignRight="@+id/cimg_avatar"
                    android:layout_marginTop="6dp"
                    android:layout_below="@+id/cimg_avatar"
                    android:minHeight="26dp"
                    android:text="Confirm"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_check_black_24dp"
                    android:background="@drawable/green_button"
                    android:textColor="#fff"
                    android:visibility="invisible"
                    android:textSize="12sp"
                    android:paddingRight="6dp"
                    android:paddingLeft="6dp"/>
            </RelativeLayout>
        </LinearLayout>
        <EditText
            android:textColorHint="@color/babay"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/black"
            android:id="@+id/edt_fullname_cv"
            android:hint="@string/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_marginTop="@dimen/dp_10"
                android:textColorHint="@color/babay"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/black"
                android:id="@+id/edt_date_of_birth_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth"
                android:editable="false"/>
            <Button
                android:textColor="@color/white"
                android:background="@color/colorMenu"
                android:layout_alignRight="@+id/edt_date_of_birth_cv"
                android:id="@+id/btn_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="..."/>
        </RelativeLayout>
        <EditText
            android:textColorHint="@color/babay"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/black"
            android:id="@+id/edt_phone_number_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            />
        <EditText
            android:textColorHint="@color/babay"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/black"
            android:id="@+id/edt_email_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"/>
        <EditText
            android:textColorHint="@color/babay"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_address_vc"
            android:hint="@string/address"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:textColorHint="@color/babay"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/edt_introduce_cv"
                    android:hint="@string/introduce_youselft"/>
            </LinearLayout>
        </ScrollView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>